json reader updates added config class